Hacking in a media query to normal.css to fix the horizontal scrollbar on tablet.

--- a/sites/all/themes/dcco2013/css/dcco2013-alpha-default-normal.css
+++ b/sites/all/themes/dcco2013/css/dcco2013-alpha-default-normal.css
@@ -19,6 +19,11 @@ body {
   -webkit-box-shadow: 0px 0px 5px 2px #222;
   box-shadow:         0px 0px 5px 2px #222;
 }
+@media all and (max-width: 1200px) and (min-width: 980px) {
+  .site-wrapper {
+    width: 960px;
+  }
+}
 body .page-wrapper {
     padding-bottom: 200px;
   }
